Minor refactoring & optimization. Help command added. Removed --init and --build